# website

./: .gitignore  LICENSE  Makefile  README.md  about.md  build.sh  default.nix  dwarfmaster-website.cabal  index.html  shell.nix  site.cabal  site.hs
articles/: 2017-03-31-gnu-mach-principles.markdown  2020-01-25-free-group-construction.markdown  2020-02-09-free-group-construction.markdown
articles/article1/: content.hamlet
articles/gnu-mach-principles/: content.m4.hamlet
articles/hacking-hurd-workflow/: content.hamlet  content.m4.hamlet
bdd/: add_article.pl  article.pl  common.pl  list-articles.pl  menu.pl  postproc.pl  preproc.pl
cgi/: article.rb  blog.rb  config.rb  menu.rb  pop.sql
css/: default.css  woodland.css
hakyll/: Makefile  dwarfmaster-website.cabal  index.html  site.hs
hakyll/articles/: 2017-02-28-hacking-hurd-workflow.markdown  2017-03-31-gnu-mach-principles.markdown
hakyll/css/: default.css
hakyll/templates/: article.html  blog.html  default.html  post-list.html  tag.html
haskell/: .gitignore  shell.nix  site.cabal
haskell/articles/: template.m4
html/: article.css  article.html  articles.css  foot.css  menu.css  menu.html
src/: Articles.hs  Dispatch.hs  Main.hs  NBlog.hs
style/: article.css  articles.css
templates/: article.cassius  article.hamlet  article404.cassius  article404.hamlet  blog.hamlet  blog.html  default-layout.cassius  default-layout.hamlet  default.html  footer.hamlet  home.hamlet  navigation.hamlet  post-list.html  tag.html  tagbar.hamlet  topbar.hamlet
utils/: add_article.rb  common.pl  preproc.rb
(+45 files in other folders)
