name:          Site
version:       0.1.0.0
synopsis:      DwarfMaster website
-- description:
homepage:      https://github.com/lucas8/website
license:       GPL-3
license-file:  LICENSE
author:        Luc Chabassier
maintainer:    luc.linux@mailoo.org
-- copyright:
category:      Web
build-type:    Simple
-- extra-source-files:
cabal-version: >=1.10

executable dwarf-site
    main-is:          Main.hs
    other-modules:    Foundation
                      Dispatch
                      Blog
                      Handler.Home
                      Handler.Blog
                      Handler.About
    -- other-extensions:
    build-depends:    base >= 4.12 && < 4.13, yesod, data-default, time,
                      split, containers, shakespeare
    hs-source-dirs:   src
    default-language: Haskell2010
